# tenet

./: .dockerignore  .gitignore  Makefile  README.md  STATUS.md  demo.md  expert-art.json  pyproject.toml  pytest.ini  rehearsal-status.md  requirements-android.txt  requirements.txt  setup.cfg  setup.py  tox.ini
android/: LICENSE  pyproject.toml  tenet
config/: alpha-live-experts.json  gate-b-topology.json.example  item-15-6-report.json  join-pack.json  live-enclave.json  live-mailbox-client.json  network-clients.json
deploy/: Dockerfile.enclave  Dockerfile.matcher-real  Dockerfile.node  acme-wait-and-provision.sh  assemble-matcher-eif.sh  associate-elastic-ip.sh  build-bountynet-bin.sh  deploy-reach-relay.sh  enclave-entry.sh  enclave-workload.sh  entry-matcher-stub.sh  entry-matcher.sh  nitro-deploy.sh  nitro-matcher-all-in-one.sh  node-entry.sh  redeploy-matcher-eif.sh  run_matcher.py  run_matcher_live.py  verify-enclave.sh
docs/: DEMOS.md  conf.py  por_layer7_architecture.md  por_wire_protocol.md  release-bumps.md  supernode_threat_model.md
examples/: home-client-supernode.config.json
notes/: HYBRID_RETURN_PATH_SPEC.txt  tenet_transport_backlog.md
oblivious-core/: Cargo.toml  README.md  pyproject.toml
oblivious-core/src/: lib.rs
por/: __init__.py  __main__.py  client.py  config.py  directory.py  envelope.py  expert_mode.py  expert_route.py  log_events.py  memory_index.py  node_runtime.py  peer_address.py  provider.py  quic_demo.py  quic_runtime.py  quic_transport.py  reach_wire.py  session.py  supernode.py  transport_dial.py  udp_demo.py  upnp.py  wire_frame.py
scripts/: build-beta-enclave-data.py  build-client-sim-image.sh  build-node-image.sh  build-oblivious-core.sh  build_android_wheels.sh  build_binary.py  build_web_demo.py  check_ta_claims.py  complete-gate-b.sh  demo-expert-plan-live.sh  demo-gate-b-e2e.sh  demo-live-mailbox-e2e.sh  demo-live-product.sh  demo-mailbox-e2e.sh  demo.py  deploy-gate-b-live.sh  deploy-network-clients.sh  deploy-windows-asker.sh  entry_web_demo.py  expert-onboard.sh  export-relay-peer-address.py  init-beta-secrets.sh  install-aw.sh  network-beta.sh  package-asker-bundle.sh  pinned-sha.sh  provision-network-clients.sh  refresh-live-pins.sh  render-beta-config.sh  render-join-pack.py  render-join-pack.sh  run-client-sim-wsl.sh  run-client-sim.sh  run-item-15-6-load.sh  run-plain-matcher.sh  sign_release_trust_update.py  sim_mixnet_anthropic_proxy.py  sim_mixnet_llm_roundtrip.py  smoke.sh  sync-gate-b-artifacts.py  (+10 more)
sim/: README.md  (+6 more)
(+187 files in other folders)
